changed text parts

--- a/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🧸 Use LLMs for suggestions for Text Classification and Summarization with `spacy-llm`\n",
+    "# 🧸 Using LLMs for Text Classification and Summarization Suggestions with `spacy-llm`\n",
     "\n",
     "In this tutorial, we'll implement a `spacy-llm` pipeline to obtain model suggestions with GPT3.5 and add them to our `FeedbackDataset` as `suggestions`. The flow of the tutorial will be:\n",
     "\n",
     "- Run Argilla and load `spacy-llm` along with other libraries\n",
     "- Define config for your pipeline and initialize it\n",
     "- Create your `FeedbackDataset` instance\n",
-    "- Make inference on data and add it to `records`\n",
+    "- Generate predictions on data and add them to `records`\n",
     "- Push to Argilla\n",
     "\n",
     "## Introduction\n",
     "\n",
     "[spacy-llm](https://spacy.io/usage/large-language-models) is a package that integrates the strength of LLMs into regular spaCy pipelines, thus allowing to quick and practical prompting for various tasks. Besides, since it requires no training data, the models are ready to use in your pipeline. If you want to train your own model or create your custom task, `spacy-llm` also helps to implement any custom pipeline.\n",
     "\n",
-    "It is quite easy to use this powerful package with Argilla Feedback. We can make inferences with the pipeline we will create and add them to our `FeedbackDataset`."
+    "It is quite easy to use this powerful package with Argilla Feedback datasets. We can make inferences with the pipeline we will create and add them to our `FeedbackDataset`."
    ]
   },
   {
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "doc = nlp(\"No matter how hard they tried, Barcelona lost the match.\")\n",
-    "print(doc.cats)"
+    "doc.cats"
    ]
   },
   {
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we have implemented a spacy-llm pipeline for text classification and summarization task. By Argilla Feedback, we have been able to add the model predictions as suggestions to our dataset so that our annotators can utilize them. For more info on spacy-llm, you can go to their LLM [page](https://spacy.io/usage/large-language-models), and for other uses of Argilla Feedback, you can refer to our [guides](https://docs.argilla.io/en/latest/guides/llms/practical_guides/practical_guides.html)."
+    "In this tutorial, we have implemented a spacy-llm pipeline for text classification and summarization task. By Argilla Feedback datasets, we have been able to add the model predictions as suggestions to our dataset so that our annotators can utilize them. For more info on spacy-llm, you can go to their LLM [page](https://spacy.io/usage/large-language-models), and for other uses of Argilla Feedback datasets, you can refer to our [guides](https://docs.argilla.io/en/latest/guides/llms/practical_guides/practical_guides.html)."
    ]
   }
  ],
