feat: adapt active learning with small-text example to recent argilla version
Signed-off-by: Christopher Schröder <chschroeder@users.noreply.github.com>

--- a/docs/_source/tutorials/notebooks/deploying-textclassification-colab-activelearning.ipynb
+++ b/docs/_source/tutorials/notebooks/deploying-textclassification-colab-activelearning.ipynb
@@ -45,10 +45,10 @@
    },
    "outputs": [],
    "source": [
-    "%pip install \"argilla[server, listeners]==1.1.1\"\n",
+    "%pip install \"argilla[server, listeners]==1.16.0\"\n",
     "%pip install \"transformers[sentencepiece]~=4.25.1\"\n",
     "%pip install \"datasets~=2.7.1\"\n",
-    "%pip install \"small-text[transformers]~=1.1.1\"\n",
+    "%pip install \"small-text[transformers]~=1.3.2\"\n",
     "%pip install \"colab-xterm~=0.1.2\"\n",
     "%pip install \"pyngrok~=5.2.1\"\n",
     "%pip install \"colab-xterm~=0.1.2\""
@@ -363,7 +363,7 @@
     "    TransformerModelArguments(transformer_model),\n",
     "    num_classes=num_classes,\n",
     "    kwargs={\"device\": device, \"num_epochs\": num_epochs, \"lr\": 2e-05, \"mini_batch_size\": 8,\n",
-    "            \"early_stopping_no_improvement\": 5}  # kwargs={\"device\": \"cuda\"}\n",
+    "            \"early_stopping_no_improvement\": 5}\n",
     ")\n",
     "\n",
     "\n",
@@ -413,21 +413,21 @@
     "import argilla as rg\n",
     "\n",
     "# Choose a name for the dataset\n",
-    "DATASET_NAME = f\"{dataset_name}_with_active_learning\"\n",
+    "DATASET_NAME = f\"{dataset_name}-with-active-learning\"\n",
     "\n",
     "# Define labeling schema\n",
     "labels = dataset_hf[\"train\"].features[\"coarse_label\"].names\n",
     "settings = rg.TextClassificationSettings(label_schema=labels)\n",
     "\n",
     "# Create dataset with a label schema\n",
-    "rg.configure_dataset(name=DATASET_NAME, settings=settings)\n",
+    "rg.configure_dataset_settings(name=DATASET_NAME, settings=settings)\n",
     "\n",
     "# Create records from the initial batch\n",
     "records = [\n",
     "    rg.TextClassificationRecord(\n",
     "        text=dataset_hf[\"train\"][\"text\"][idx],\n",
     "        metadata={\"batch_id\": 0},\n",
-    "        id=idx,\n",
+    "        id=idx.item(),\n",
     "    )\n",
     "    for idx in initial_indices\n",
     "]\n",
@@ -483,7 +483,7 @@
     "        rg.TextClassificationRecord(\n",
     "            text=dataset_hf[\"train\"][\"text\"][idx],\n",
     "            metadata={\"batch_id\": new_batch},\n",
-    "            id=idx,\n",
+    "            id=idx.item(),\n",
     "        )\n",
     "        for idx in queried_indices\n",
     "    ]\n",
