docs: added correct references

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-setfit.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-setfit.ipynb
@@ -5,7 +5,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# ✨ Add zero-shot suggestions using SetFit\n",
+        "# ✨ Add zero-shot text classification suggestions using SetFit\n",
         "\n",
         "Suggestions are a wonderful way to make things easier and faster for your annotation team. These preselected options will make the labelling process more efficient, as they will only need to correct the suggestions. \n",
         "\n",
