--- a/src/argilla/client/feedback/dataset/task-specific-feedback.ipynb
+++ b/src/argilla/client/feedback/dataset/task-specific-feedback.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -13,15 +23,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kursat/argilla/src/argilla/client/client.py:165: UserWarning: No workspace configuration was detected. To work with Argilla datasets, specify a valid workspace name on `rg.init` or set it up through the `rg.set_workspace` function.\n",
+      "  warnings.warn(\n",
+      "/Users/kursat/argilla/src/argilla/client/client.py:182: UserWarning: You're connecting to Argilla Server 1.14.1 using a different client version (1.17.0-dev).\n",
+      "This may lead to potential compatibility issues during your experience.\n",
+      "To ensure a seamless and optimized connection, we highly recommend aligning your client version with the server version.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\",\n",
     "    api_key=\"owner.apikey\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -70,7 +100,7 @@
     "                fields = {dataset_fields[index]: text_fields[field][item] for index, field in enumerate(dataset_fields)}\n",
     "            )\n",
     "            self.add_records(record)\n",
-    "\n",
+    "            \n",
     "    @classmethod\n",
     "    def for_question_answering(cls, answers=False):\n",
     "        \"\"\"\n",
@@ -179,23 +209,18 @@
     "        :param: labels: Set this parameter to True if you want to add labels to have the translations annotated.\n",
     "        :return: A FeedbackDataset object for translation containing \"text\" and \"translation\" fields.\n",
     "        \"\"\"\n",
-    "        ds = rg.FeedbackDataset(\n",
+    "        questions = [rg.TextQuestion(name=\"translation\")]\n",
+    "\n",
+    "        if labels:\n",
+    "            questions.append(rg.LabelQuestion(name=\"label\",labels=labels))\n",
+    "\n",
+    "        ds = FeedbackDataset(\n",
     "            fields=[\n",
     "                rg.TextField(name=\"text\"),\n",
     "                ],\n",
-    "            questions=[\n",
-    "                rg.TextQuestion(\n",
-    "                name=\"translation\",\n",
-    "                )\n",
-    "            ]\n",
+    "            questions= questions\n",
     "        )\n",
-    "        if labels:\n",
-    "            ds.questions.append(\n",
-    "                rg.LabelQuestion(\n",
-    "                name=\"label\",\n",
-    "                labels=labels\n",
-    "                )\n",
-    "            )\n",
+    "\n",
     "        if examples:\n",
     "            ds.fields.append(\n",
     "                rg.TextField(name=\"example\",title=\"Example Translation\")\n",
@@ -490,21 +515,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "translation_hf = load_dataset(\"abidlabs/test-translation-dataset\", split=\"train\")\n",
-    "dict_translation = {\"text\": [translation_hf[\"Input\"][i] for i in range(len(translation_hf[\"Input\"]))], \"example\": [translation_hf[\"Translation\"][i] for i in range(len(translation_hf[\"Translation\"]))]}"
+    "dict_translation = {\"text\": [translation_hf[\"Input\"][i] for i in range(len(translation_hf[\"Input\"]))]} #, \"example\": [translation_hf[\"Translation\"][i] for i in range(len(translation_hf[\"Translation\"]))]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_translation = FeedbackDs.for_translation(labels=False, examples=True)\n",
+    "ds_translation = FeedbackDataset.for_translation(labels=False)\n",
     "ds_translation.add_item(dict_translation)"
    ]
   },
@@ -517,20 +542,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 4/4 [00:00<00:00, 36.38it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 2/2 [00:00<00:00, 28.21it/s]\n"
      ]
     }
    ],
    "source": [
-    "remote_ds = ds_sent_sim.push_to_argilla(name=\"sample_sentence_similarity\", workspace=\"admin\")"
+    "remote_ds = ds_translation.push_to_argilla(name=\"try37\", workspace=\"admin\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds0 = rg.FeedbackDataset.for_question_answering()\n",
+    "ds0.fields[0].use_markdown = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<FeedbackDataset fields=[TextField(name='text', title='Text', required=True, type='text', use_markdown=False)] questions=[TextQuestion(name='translation', title='Translation', description=None, required=True, type='text', use_markdown=False)] guidelines=None>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rg.FeedbackDataset.for_translation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds0.add_records(rg.FeedbackRecord(fields={\"question\": \"qq1\", \"context\": \"cc1\"}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for_sentence_similarity\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds0 = rg.FeedbackDataset.for_sentence_similarity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
