--- a/src/argilla/client/feedback/dataset/test_file.ipynb
+++ b/src/argilla/client/feedback/dataset/test_file.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +50,8 @@
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\",\n",
     "    api_key=\"owner.apikey\"\n",
-    ")"
+    ")\n",
+    "x = str(0)"
    ]
   },
   {
@@ -53,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 44.36it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 49.35it/s]\n"
      ]
     }
    ],
@@ -68,7 +78,7 @@
     "items_qa = {\"question\": [\"What is the capital of Germany?\", \"What is the fastest animal?\"], \"context\": [\"Berlin is the capital of Germany.\",\"Cheetah is the fastest animal.\"]}\n",
     "dataset_qa = rg.FeedbackDataset.for_question_answering()\n",
     "dataset_qa.add_item(items_qa)\n",
-    "remote_dataset_qa = dataset_qa.push_to_argilla(name=\"sample_question_answering\", workspace=\"admin\")"
+    "remote_dataset_qa = dataset_qa.push_to_argilla(name=\"sample_question_answering\"+x, workspace=\"admin\")"
    ]
   },
   {
@@ -80,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 44.16it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 50.21it/s]\n"
      ]
     }
    ],
@@ -96,7 +106,7 @@
     "labels_textcat = [\"positive\", \"negative\"]\n",
     "dataset_textcat = rg.FeedbackDataset.for_text_classification(labels_textcat)\n",
     "dataset_textcat.add_item(items_textcat)\n",
-    "remote_dataset_textcat = dataset_textcat.push_to_argilla(name=\"sample_text_classification\", workspace=\"admin\")"
+    "remote_dataset_textcat = dataset_textcat.push_to_argilla(name=\"sample_text_classification\"+x, workspace=\"admin\")"
    ]
   },
   {
@@ -108,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 71.29it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 54.15it/s]\n"
      ]
     }
    ],
@@ -123,34 +133,7 @@
     "items_sft = {\"instruction\": [\"This is a positive text.\", \"This is a negative text.\"], \"context\": [\"This text is positive.\", \"This text is negative.\"]}\n",
     "dataset_sft = rg.FeedbackDataset.for_supervised_fine_tuning(context=True)\n",
     "dataset_sft.add_item(items_sft)\n",
-    "remote_dataset_sft = dataset_sft.push_to_argilla(name=\"sample_supervised_fine_tuning\", workspace=\"admin\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "SENTENCE SIMILARITY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 43.48it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "items_sentsim = {\"sentence1\": [\"The window is fully open.\", \"The party is nearly full.\"], \"sentence2\": [\"The window is open.\", \"The party is full.\"]}\n",
-    "dataset_sentsim = rg.FeedbackDataset.for_sentence_similarity()\n",
-    "dataset_sentsim.add_item(items_sentsim)\n",
-    "remote_dataset_sentsim = dataset_sentsim.push_to_argilla(name=\"sample_sentence_similarity\", workspace=\"admin\")"
+    "remote_dataset_sft = dataset_sft.push_to_argilla(name=\"sample_supervised_fine_tuning\"+x, workspace=\"admin\")"
    ]
   },
   {
@@ -162,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 34.01it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 54.22it/s]\n"
      ]
     }
    ],
@@ -177,7 +160,7 @@
     "items_summarization = {\"text\": [\"The Eiffel Tower is an iconic wrought-iron lattice structure located in Paris, France, and is one of the world's most famous landmarks.\", \"The Louvre or the Louvre Museum is the world's largest art museum and a historic monument in Paris, France.\"]}\n",
     "dataset_summarization = rg.FeedbackDataset.for_summarization()\n",
     "dataset_summarization.add_item(items_summarization)\n",
-    "remote_dataset_summarization = dataset_summarization.push_to_argilla(name=\"sample_summarization\", workspace=\"admin\")"
+    "remote_dataset_summarization = dataset_summarization.push_to_argilla(name=\"sample_summarization\"+x, workspace=\"admin\")"
    ]
   },
   {
@@ -189,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 37.80it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 67.50it/s]\n"
      ]
     }
    ],
@@ -205,7 +188,7 @@
     "labels_translation = [\"positive\", \"negative\"]\n",
     "dataset_translation = rg.FeedbackDataset.for_translation(labels=labels_translation)\n",
     "dataset_translation.add_item(items_translation)\n",
-    "remote_dataset_translation = dataset_translation.push_to_argilla(name=\"sample_translation\", workspace=\"admin\")"
+    "remote_dataset_translation = dataset_translation.push_to_argilla(name=\"sample_translation\"+x, workspace=\"admin\")"
    ]
   },
   {
@@ -217,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 65.97it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 51.22it/s]\n"
      ]
     }
    ],
@@ -232,7 +215,7 @@
     "items_conversational = {\"context\": [\"Hello, how are you?\", \"How do you feel, today?\"], \"system_prompt\": [\"You are a close friend of mine.\", \"You are a stranger.\"]}\n",
     "dataset_conversational = rg.FeedbackDataset.for_conversational(system_prompt=True)\n",
     "dataset_conversational.add_item(items_conversational)\n",
-    "remote_dataset_conversational = dataset_conversational.push_to_argilla(name=\"sample_conversational\", workspace=\"admin\")"
+    "remote_dataset_conversational = dataset_conversational.push_to_argilla(name=\"sample_conversational\"+x, workspace=\"admin\")"
    ]
   },
   {
@@ -244,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 43.19it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 70.50it/s]\n"
      ]
     }
    ],
@@ -259,7 +242,88 @@
     "items_rag = {\"query\": [\"What is the status of the war?\", \"Is United Kindgdom still a member of the EU?\"], \"retrieved_document\": [\"The war is over.\", \"The UK left the EU at the end of 31 January 2020.\"], \"retrieval_source\": [\"wikipedia\", \"wikipedia\"]}\n",
     "dataset_rag = rg.FeedbackDataset.for_retrieval_augmented_generation(retrieval_source=True)\n",
     "dataset_rag.add_item(items_rag)\n",
-    "remote_dataset_rag = dataset_rag.push_to_argilla(name=\"sample_retrieval_augmented_generation\", workspace=\"admin\")"
+    "remote_dataset_rag = dataset_rag.push_to_argilla(name=\"sample_retrieval_augmented_generation\"+x, workspace=\"admin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SENTENCE SIMILARITY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 48.14it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "items_sentsim = {\"sentence1\": [\"The window is fully open.\", \"The party is nearly full.\"], \"sentence2\": [\"The window is open.\", \"The party is full.\"]}\n",
+    "dataset_sentsim = rg.FeedbackDataset.for_sentence_similarity()\n",
+    "dataset_sentsim.add_item(items_sentsim)\n",
+    "remote_dataset_sentsim = dataset_sentsim.push_to_argilla(name=\"sample_sentence_similarity\"+x, workspace=\"admin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PREFERENCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 65.70it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "item_preference = {\"context\": [\"Where is the bus station?\", \"Where is the train station?\"], \"option1\": [\"The bus station is on the left.\", \"The train station is on the right.\"], \"option2\": [\"The bus station is on the right.\", \"The train station is on the left.\"]}\n",
+    "dataset_preference = rg.FeedbackDataset.for_preference()\n",
+    "dataset_preference.add_item(item_preference)\n",
+    "remote_dataset_preference = dataset_preference.push_to_argilla(name=\"sample_preference\"+x, workspace=\"admin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INSTRUCTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 60.22it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "item_instruction = {\"instruction\": [\"Arrange the following numbers in ascending order:\", \"Arrange the following words in grammatical order:\"], \"input\": [\"1, 3, 2, 4\", \"dog love much so I my\"]}\n",
+    "dataset_preference = rg.FeedbackDataset.for_instruction()\n",
+    "dataset_preference.add_item(item_instruction)\n",
+    "remote_dataset_preference = dataset_preference.push_to_argilla(name=\"sample_instruction\"+x, workspace=\"admin\")"
    ]
   }
  ],
