--- a/docs/_source/practical_guides/annotation_workflows/semantic_search.ipynb
+++ b/docs/_source/practical_guides/annotation_workflows/semantic_search.ipynb
@@ -85,7 +85,7 @@
     "</div>\n",
     "\n",
     "#### Opensearch backend\n",
-    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Opensearch by downloading the [docker-compose.yaml file](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker-compose.opensearch.yaml) and running:\n",
+    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Opensearch by downloading the [docker-compose.opensearch.yaml file](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker/docker-compose.opensearch.yaml) and running:\n",
     "\n",
     "```bash\n",
     "docker-compose -f docker-compose.opensearch.yaml up\n",
@@ -93,7 +93,7 @@
     "Once the service is up you can launch the Argilla Server with `python -m argilla`.\n",
     "\n",
     "#### Elasticsearch backend\n",
-    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Elasticsearch by downloading the [docker-compose.yaml](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker-compose.elasticsearch.yaml) and running:\n",
+    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Elasticsearch by downloading the [docker-compose.elasticsearch.yaml](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker/docker-compose.elasticsearch.yaml) and running:\n",
     "\n",
     "```bash\n",
     "docker-compose -f docker-compose.elasticsearch.yaml up\n",
