Revert "Changing dead links from docs"
This reverts commit 72d16644fac2af4348d11299690c9c319eb27a4c.

--- a/docs/_source/practical_guides/annotation_workflows/weak_supervision.ipynb
+++ b/docs/_source/practical_guides/annotation_workflows/weak_supervision.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "### Example dataset\n",
     "\n",
-    "We'll be using a well-known dataset for weak supervision examples, the [YouTube Spam Collection](https://archive.ics.uci.edu/dataset/380/youtube+spam+collection) dataset, which is a binary classification task for detecting spam comments in Youtube videos. "
+    "We'll be using a well-known dataset for weak supervision examples, the [YouTube Spam Collection](http://www.dt.fee.unicamp.br/~tiago//youtubespamcollection/) dataset, which is a binary classification task for detecting spam comments in Youtube videos. "
    ]
   },
   {
