--- a/docs/_source/tutorials/notebooks/monitoring-textclassification-setfit-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/monitoring-textclassification-setfit-explainability.ipynb
@@ -140,7 +140,7 @@
         "id": "MQibTErO5De0"
       },
       "source": [
-        "For this tutorial the HugginFace [ag_news](https://huggingface.co/datasets/ag_news) dataset is chosen:"
+        "For this tutorial the HugginFace [ag_news](https://https://huggingface.co/datasets/ag_news) dataset is chosen:"
       ]
     },
     {
