edited some task structures

--- a/src/argilla/client/feedback/dataset/test_file.ipynb
+++ b/src/argilla/client/feedback/dataset/test_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,28 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kursat/argilla/src/argilla/client/client.py:165: UserWarning: No workspace configuration was detected. To work with Argilla datasets, specify a valid workspace name on `rg.init` or set it up through the `rg.set_workspace` function.\n",
-      "  warnings.warn(\n",
-      "/Users/kursat/argilla/src/argilla/client/client.py:182: UserWarning: You're connecting to Argilla Server 1.14.1 using a different client version (1.17.0-dev).\n",
-      "This may lead to potential compatibility issues during your experience.\n",
-      "To ensure a seamless and optimized connection, we highly recommend aligning your client version with the server version.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\",\n",
     "    api_key=\"owner.apikey\"\n",
     ")\n",
-    "x = str(0)"
+    "x = str(3)"
    ]
   },
   {
@@ -63,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 49.35it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 64.19it/s]\n"
      ]
     }
    ],
@@ -90,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 50.21it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 70.37it/s]\n"
      ]
     }
    ],
@@ -118,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 54.15it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 68.18it/s]\n"
      ]
     }
    ],
@@ -145,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 54.22it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 72.20it/s]\n"
      ]
     }
    ],
@@ -172,21 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 67.50it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 64.97it/s]\n"
      ]
     }
    ],
    "source": [
     "items_translation = {\"text\": [\"The Eiffel Tower is an iconic wrought-iron lattice structure located in Paris, France, and is one of the world's most famous landmarks.\", \"The Louvre or the Louvre Museum is the world's largest art museum and a historic monument in Paris, France.\"]}\n",
-    "labels_translation = [\"positive\", \"negative\"]\n",
-    "dataset_translation = rg.FeedbackDataset.for_translation(labels=labels_translation)\n",
+    "dataset_translation = rg.FeedbackDataset.for_translation()\n",
     "dataset_translation.add_item(items_translation)\n",
     "remote_dataset_translation = dataset_translation.push_to_argilla(name=\"sample_translation\"+x, workspace=\"admin\")"
    ]
@@ -200,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 51.22it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 33.47it/s]\n"
      ]
     }
    ],
@@ -227,20 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 70.50it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 70.33it/s]\n"
      ]
     }
    ],
    "source": [
-    "items_rag = {\"query\": [\"What is the status of the war?\", \"Is United Kindgdom still a member of the EU?\"], \"retrieved_document\": [\"The war is over.\", \"The UK left the EU at the end of 31 January 2020.\"], \"retrieval_source\": [\"wikipedia\", \"wikipedia\"]}\n",
-    "dataset_rag = rg.FeedbackDataset.for_retrieval_augmented_generation(retrieval_source=True)\n",
+    "items_rag = {\"query\": [\"What is the status of the war?\", \"Is United Kindgdom still a member of the EU?\"], \"retrieved_document\": [\"The war is over.\", \"The UK left the EU at the end of 31 January 2020.\"]}\n",
+    "dataset_rag = rg.FeedbackDataset.for_retrieval_augmented_generation()\n",
     "dataset_rag.add_item(items_rag)\n",
     "remote_dataset_rag = dataset_rag.push_to_argilla(name=\"sample_retrieval_augmented_generation\"+x, workspace=\"admin\")"
    ]
@@ -254,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 48.14it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 21.11it/s]\n"
      ]
     }
    ],
@@ -281,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 65.70it/s]\n"
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 38.61it/s]\n"
      ]
     }
    ],
@@ -297,33 +283,6 @@
     "dataset_preference = rg.FeedbackDataset.for_preference()\n",
     "dataset_preference.add_item(item_preference)\n",
     "remote_dataset_preference = dataset_preference.push_to_argilla(name=\"sample_preference\"+x, workspace=\"admin\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "INSTRUCTION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 60.22it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "item_instruction = {\"instruction\": [\"Arrange the following numbers in ascending order:\", \"Arrange the following words in grammatical order:\"], \"input\": [\"1, 3, 2, 4\", \"dog love much so I my\"]}\n",
-    "dataset_preference = rg.FeedbackDataset.for_instruction()\n",
-    "dataset_preference.add_item(item_instruction)\n",
-    "remote_dataset_preference = dataset_preference.push_to_argilla(name=\"sample_instruction\"+x, workspace=\"admin\")"
    ]
   }
  ],
