added tasks and updated fields

--- a/src/argilla/client/feedback/dataset/test_file.ipynb
+++ b/src/argilla/client/feedback/dataset/test_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,9 +280,35 @@
    ],
    "source": [
     "item_preference = {\"context\": [\"Where is the bus station?\", \"Where is the train station?\"], \"option1\": [\"The bus station is on the left.\", \"The train station is on the right.\"], \"option2\": [\"The bus station is on the right.\", \"The train station is on the left.\"]}\n",
-    "dataset_preference = rg.FeedbackDataset.for_preference()\n",
+    "dataset_preference = rg.FeedbackDataset.for_preference_modeling()\n",
     "dataset_preference.add_item(item_preference)\n",
     "remote_dataset_preference = dataset_preference.push_to_argilla(name=\"sample_preference\"+x, workspace=\"admin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00, 70.01it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_rag = rg.FeedbackDataset.for_retrieval_augmented_generation(number_of_documents=2)\n",
+    "\n",
+    "record = rg.FeedbackRecord(\n",
+    "    fields={\n",
+    "        \"query\": \"What is the status of the war?\",\n",
+    "        \"retrieved_document_1\": \"The war is over.\",\n",
+    "        \"retrieved_document_2\": \"The war is still going on.\",\n",
+    "    })\n",
+    "dataset_rag.add_records(record)\n",
+    "remote_dataset_rag = dataset_rag.push_to_argilla(name=\"sample_rag1\"+x, workspace=\"admin\")"
    ]
   }
  ],
