quickstart_installation review

--- a/docs/_source/getting_started/quickstart_installation.ipynb
+++ b/docs/_source/getting_started/quickstart_installation.ipynb
@@ -21,7 +21,7 @@
     "Let's get up and running with Argilla!\n",
     "\n",
     "## Running Argilla Quickstart\n",
-    "For small scale projects and quick experimentation, there are two recommended ways:\n",
+    "For small-scale projects and quick experimentation, there are two recommended ways:\n",
     "\n",
     "### 👩🏽‍🚀 Argilla on Hugging Face Spaces\n",
     "If you have a Hugging Face account and want to run Argilla workflows from Colab or remote notebooks, you can deploy Argilla on Spaces:\n",
@@ -35,13 +35,13 @@
     "<img src=\"https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/hub/spaces-argilla-duplicate-space.png\"/>\n",
     "</div>\n",
     "\n",
-    "You are now ready to start playing with Argilla! As the next step, we recommend [finding a tutorial](../tutorials/tutorials.html). Once you have a found a tutorial, you can (1) use the `Open in Colab` button to run Argilla workflows with free GPUs, or (2) download the notebook using the link `View source` at top-right corner of each tutorial page, and run it using VS Code, Jupyter Lab, or any other Jupyter IDE.\n",
+    "You are now ready to start playing with Argilla! As the next step, we recommend [finding a tutorial](../tutorials/tutorials.html). Once you have found a tutorial, you can (1) use the `Open in Colab` button to run Argilla workflows with free GPUs, or (2) download the notebook using the link `View source` at the top-right corner of each tutorial page, and run it using VS Code, Jupyter Lab, or any other Jupyter IDE.\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "\n",
     "Note\n",
     "\n",
-    "If you want to configure settings such as UI passwords and API keys, you can [follow this guide](installation/deployments/huggingface-spaces.md). This is completely optional step if you want to just quickly experiment with Argilla, but it's recommended for small projects as you can control who can browse, upload, and delete datasets.\n",
+    "If you want to configure settings such as UI passwords and API keys, you can [follow this guide](installation/deployments/huggingface-spaces.md). This is a completely optional step if you want to quickly experiment with Argilla, but it's recommended for small projects as you can control who can browse, upload, and delete datasets.\n",
     "\n",
     "</div>\n",
     "\n",
@@ -76,7 +76,7 @@
     "\n",
     "If everything goes well, you can go to [http://localhost:6900](http://localhost:6900) and log in with username `admin` and password `12345678`. You'll see several example datasets already pre-loaded. That means you are ready to start playing with Argilla! \n",
     "\n",
-    "As the next step, we recommend [finding a tutorial](../tutorials/tutorials.md), downloading the notebook using the link `View source` at top-right corner of each tutorial page, and run it using VS Code, Jupyter Lab, or any other Jupyter IDE.\n",
+    "As the next step, we recommend [finding a tutorial](../tutorials/tutorials.md), downloading the notebook using the link `View source` at the top-right corner of each tutorial page, and running it using VS Code, Jupyter Lab, or any other Jupyter IDE.\n",
     "\n",
     "For more details about setting up your Argilla Quickstart container [follow this guide](installation/deployments/docker-quickstart.md).\n",
     "\n",
@@ -92,7 +92,7 @@
    "source": [
     "## A default workflow\n",
     "\n",
-    "If you want to go over a default workflow in argilla, check out [basics guide](../getting_started/quickstart_workflow.html)."
+    "If you want to go over a default workflow in Argilla, check out [basic guides](../getting_started/quickstart_workflow_feedback.html)."
    ]
   }
  ],
