quickstat_workflow review

--- a/docs/_source/getting_started/quickstart_workflow.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow.ipynb
@@ -7,14 +7,14 @@
         "id": "8b1cd645"
       },
       "source": [
-        "# Workflow other datasets\n",
+        "# Workflow of Other Datasets\n",
         "Welcome! This will cover a default workflow from logging data to preparing for training.\n",
         "\n",
         "<div class=\"alert alert-info\">\n",
         "\n",
-        "info\n",
+        "Note\n",
         "\n",
-        "This workflow covers the `FeedbackDataset`. The workflow for the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text` can be found [here](/getting_started/quickstart_workflow.html). Not sure which dataset to use? Check out our section on [choosing a dataset](/practical_guides/choose_dataset.html).\n",
+        "This workflow covers the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text`. The workflow for `FeedbackDataset` can be found [here](../getting_started/quickstart_workflow_feedback.html). Not sure which dataset to use? Check out our section on [choosing a dataset](../practical_guides/choose_dataset.html).\n",
         "\n",
         "</div>"
       ]
@@ -28,7 +28,7 @@
       "source": [
         "## Install Libraries\n",
         "\n",
-        "Install Argilla lastest version in Colab, along with other libraries and models used in this notebook."
+        "Install the latest version of Argilla in Colab, along with other libraries and models used in this notebook."
       ]
     },
     {
@@ -65,7 +65,7 @@
         "docker run -d --name quickstart -p 6900:6900 argilla/argilla-quickstart:latest\n",
         "```\n",
         "\n",
-        "More info on Installation [here](/getting_started/installation/deployments/deployments.html)."
+        "More info on Installation [here](../getting_started/installation/deployments/deployments.html)."
       ]
     },
     {
@@ -86,7 +86,7 @@
         "id": "klwYMH_rdv0m"
       },
       "source": [
-        "It is possible to connect to our Argilla instance by simply importing Argilla library, which internally connects to Argilla Server using the `ARGILLA_API_URL` and `ARGILLA_API_KEY` environment variables."
+        "It is possible to connect to our Argilla instance by simply importing the Argilla library, which internally connects to the Argilla Server using the `ARGILLA_API_URL` and `ARGILLA_API_KEY` environment variables."
       ]
     },
     {
@@ -131,11 +131,11 @@
       "source": [
         "`\"owner.apikey\"` is the default value for `ARGILLA_API_KEY` variable.\n",
         "\n",
-        "`admin` is the name of default workspace. A **workspace** is a “space” inside your Argilla instance where authorized users can collaborate.\n",
+        "`admin` is the name of the default workspace. A **workspace** is a “space” inside your Argilla instance where authorized users can collaborate.\n",
         "\n",
-        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](/getting_started/installation/configurations/configurations.md).\n",
+        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](../getting_started/installation/configurations/configurations.html).\n",
         "\n",
-        "If you want to customize the access credentials, take a look at our [user management section](/getting_started/installation/configurations/user_management.md)."
+        "If you want to customize the access credentials, take a look at our [user management section](../getting_started/installation/configurations/user_management.html)."
       ]
     },
     {
@@ -160,7 +160,7 @@
         " - `prediction`: Add task-specific model predictions to the record (Optional);\n",
         " - `metadata`: Add some arbitrary metadata to the record (Optional);\n",
         "\n",
-        "A [Dataset](/conceptual_guides/data_model.md#other-datasets) in Argilla is a collection of records of the same type."
+        "A [Dataset](../conceptual_guides/data_model.html#other-datasets) in Argilla is a collection of records of the same type."
       ]
     },
     {
@@ -1205,7 +1205,7 @@
         "We will choose the _review_ column as input text for our records.\n",
         "For Argilla to know, we have to rename the corresponding column to _text_.\n",
         "\n",
-        "Other columns can be conveniently wrapped in a dictionary and mapped as _metadata_ column as expected by the [TokenClassificationRecord](https://docs.argilla.io/en/latest/reference/python/python_client.html#argilla.client.models.TokenClassificationRecord) class."
+        "Other columns can be conveniently wrapped in a dictionary and mapped as _metadata_ columns as expected by the [TokenClassificationRecord](https://docs.argilla.io/en/latest/reference/python/python_client.html#argilla.client.models.TokenClassificationRecord) class."
       ]
     },
     {
@@ -1980,7 +1980,7 @@
         "id": "138e0dac-7772-49ae-b57e-52619ebf5899"
       },
       "source": [
-        "We can now read this `Dataset` with Argilla, which will automatically create the records and put them in a [Argilla Dataset](../guides/features/datasets.ipynb)."
+        "We can now read this `Dataset` with Argilla, which will automatically create the records and put them in an [Argilla Dataset](../guides/features/datasets.ipynb)."
       ]
     },
     {
@@ -2074,7 +2074,7 @@
       "source": [
         "### Annotation guideline\n",
         "\n",
-        "Before starting the annotation process with a team, it is important to align the different truths everyone in the team thinks they have. Because the same text is going to be annotated by multiple annotators independently or we might want to revisit an old dataset later on. Besides a set of obvious mistakes, we also often encounter uncertain grey areas. Consider the following phrase for NER-annotation `Harry Potter and the prisoner of Azkaban` can be interpreted in many ways. The entire phrase is as the movie title, `Harry Potter` is a person, and `Azkaban` is location. Maybe we don´t even want to annotate fictional locations and characters. Therefore, it is important to define these assumptions beforehand and iterate over them together with the team. Take a look at [this blog](https://www.superb-ai.com/blog/how-to-write-better-annotation-guidelines-for-human-labelers-4-top-tips) from our friends over at `suberb.ai` or [this blog](https://www.grammarly.com/blog/engineering/annotation-best-practices/?utm_campaign=B2C&utm_medium=social&utm_source=LinkedIn_org&utm_term=blog&utm_content=link) from Grammarly for more context."
+        "Before starting the annotation process with a team, it is important to align the different truths everyone in the team thinks they have. Because the same text is going to be annotated by multiple annotators independently or we might want to revisit an old dataset later on. Besides a set of obvious mistakes, we also often encounter uncertain grey areas. Consider the following phrase for NER-annotation `Harry Potter and the Prisoner of Azkaban` can be interpreted in many ways. The entire phrase is as the movie title, `Harry Potter` is a person, and `Azkaban` is a location. Maybe we don´t even want to annotate fictional locations and characters. Therefore, it is important to define these assumptions beforehand and iterate over them together with the team. Take a look at [this blog](https://www.superb-ai.com/blog/how-to-write-better-annotation-guidelines-for-human-labelers-4-top-tips) from our friends over at `suberb.ai` or [this blog](https://www.grammarly.com/blog/engineering/annotation-best-practices/?utm_campaign=B2C&utm_medium=social&utm_source=LinkedIn_org&utm_term=blog&utm_content=link) from Grammarly for more context."
       ]
     },
     {
@@ -2162,8 +2162,8 @@
         "In this case, a reasonable rule would be to label all articles that include the word \"stock\" as *Finance*.\n",
         "\n",
         "Rules can get arbitrarily complex and can also include the record's metadata.\n",
-        "The downsides of this approach are that it might be challenging to come up with working heuristic rules for some datasets.\n",
-        "Furthermore, rules are rarely 100% precise and often conflict with each other.These noisy labels can be cleaned up using weak supervision and label models, or something as simple as majority voting. It is usually a trade-off between the amount of annotated data and the quality of the labels.\n",
+        "The downside of this approach is that it might be challenging to come up with working heuristic rules for some datasets.\n",
+        "Furthermore, rules are rarely 100% precise and often conflict with each other. These noisy labels can be cleaned up using weak supervision and label models, or something as simple as majority voting. It is usually a trade-off between the amount of annotated data and the quality of the labels.\n",
         "\n",
         "Check [our guide](../guides/techniques/weak_supervision.ipynb) for an extensive introduction to weak supervision with Argilla.\n",
         "Also, check the [feature reference](../reference/webapp/features.md) for the Define rules mode of the web app and our [various tutorials](../tutorials/techniques/weak_supervision.md) to see practical examples of weak supervision workflows."
@@ -2178,7 +2178,7 @@
       "source": [
         "## Train a model\n",
         "\n",
-        "The `ArgillaTrainer` is a wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract workflow to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.  More info [here](docs/_source/practical_guides/fine_tune)."
+        "The `ArgillaTrainer` is a wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract workflow to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.  More info [here](../practical_guides/fine_tune.html)."
       ]
     },
     {
@@ -2223,9 +2223,9 @@
         "Here we list three of the most commonly used open-source libraries, but many more are available and may be more suited for your specific use case:\n",
         "\n",
         " - [transformers](https://huggingface.co/docs/transformers/index): This library provides thousands of pre-trained models for various NLP tasks and modalities. Its excellent documentation focuses on fine-tuning those models to your specific use case;\n",
-        " - [spaCy](https://spacy.io/): This library also comes with pre-trained models built into a pipeline tackling multiple tasks simultaneously. Since its a purely NLP library, it comes with much more NLP features than just model training;\n",
+        " - [spaCy](https://spacy.io/): This library also comes with pre-trained models built into a pipeline tackling multiple tasks simultaneously. Since it is a purely NLP library, it comes with many more NLP features than just model training;\n",
         " - [spark-nlp](https://nlp.johnsnowlabs.com/): Spark NLP is an open-source text processing library for advanced natural language processing for the Python, Java and Scala programming languages. The library is built on top of Apache Spark and its Spark ML library.\n",
-        " - [scikit-learn](https://scikit-learn.org/stable/): This de facto standard library is a powerful swiss army knife for machine learning with some NLP support. Usually, their NLP models lack the performance when compared to transformers or spacy, but give it a try if you want to train a lightweight model quickly;\n"
+        " - [scikit-learn](https://scikit-learn.org/stable/): This de facto standard library is a powerful Swiss army knife for machine learning with some NLP support. Usually, their NLP models lack the performance when compared to transformers or spacy, but give it a try if you want to train a lightweight model quickly;\n"
       ]
     }
   ],
