variable fix to making the tutorial works

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -312,7 +312,7 @@
         "record.update(\n",
         "    suggestions=[\n",
         "        {\n",
-        "        \"question_name\": \"label_question\",\n",
+        "        \"question_name\": \"relevant\",\n",
         "        \"value\": \"yes\"\n",
         "        }\n",
         "    ]\n",
